--- a/bhoma/apps/couchlog/static/stylesheets/couchlog.css
+++ b/bhoma/apps/couchlog/static/stylesheets/couchlog.css
@@ -5,3 +5,8 @@ table.tablesorter tr.archived td {
 table.tablesorter tr.inbox td {
     font-weight:bold;
 }
+
+#emailform textarea {
+    height: 150px;
+    width: 300px;
+}
