--- a/bhoma/apps/couchlog/templates/couchlog/dashboard.html
+++ b/bhoma/apps/couchlog/templates/couchlog/dashboard.html
@@ -4,11 +4,13 @@
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/tablesorter/pager/jquery.tablesorter.pager.css" type="text/css">
     <link rel="stylesheet" href="{{MEDIA_URL}}couchlog/stylesheets/couchlog.css" type="text/css">
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/jquery-ui-bhoma/jquery-ui-1.8.4.custom.css" type="text/css">
+    <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/jqModal.css" type="text/css">
 {% endblock %}
 {% block page_javascripts %}
     <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery.tablesorter.min.js"></script>
     <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery.tablesorter.pager.js"></script>
     <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery-ui-1.8.4.custom.min.js"></script>
+    <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jqModal.js"></script>
     <script type="text/javascript">
     // this script is required for tablesorter
     $(document).ready(function() { 
@@ -22,17 +24,18 @@
         $(".updatebutton").live("click", 
         function () { 
             button = $(this);
-            jQuery.post("{% url couchlog_update %}", { "id": button.attr("id"), "action": button.attr("action_type")},
+            id = button.parent().parent().parent().attr("id");
+            jQuery.post("{% url couchlog_update %}", { "id": id, "action": button.attr("action_type")},
             function(data){
                 json_res = JSON.parse(data);
-                row_elem = $($("#row-" + json_res.id)[0]);
+                row_elem = $($("#" + json_res.id)[0]);
                 {% ifequal show "inbox" %}
                 // if we're showing the inbox just hide the row with a pretty effect
                 row_elem.fadeOut(1000);
                 {% else %}
                 // if we're in the "all" view then update the classes and text
                 row_elem.removeClass("archived inbox").addClass(json_res.style_class);
-                button_elem = $($("#" + json_res.id)[0]);
+                button_elem = $(row_elem.find(".updatebutton")[0]);
                 button_elem.val(json_res.text);
                 button_elem.attr("action_type", json_res.next_action);
                 {% endifequal %}
@@ -57,10 +60,9 @@
                                                       "to": $("#email").val(),
                                                       "notes": $("#notes").val()},
 			            function(data){
-			                console.log(data);
 			                json_res = JSON.parse(data);
-			                console.log(json_res.id);
-			                button_elem = $($("#email-" + json_res.id)[0]);
+			                row = $($("#" + json_res.id)[0]);
+                            button_elem = $(row.find(".emailbutton")[0]);
                             if (json_res.success) {
 			                    button_elem.val("sent!");
 			                } else {
@@ -79,11 +81,19 @@
         $('.emailbutton')
             .click(function() {
                 button = $(this);
-                $("#log_holder").val(button.attr("log_id"));
+                id = button.parent().parent().parent().attr("id");
+                $('#notes').val('');
+                $("#log_holder").val(id);
                 $('#email-form').dialog('open');
                 $('#notes').focus();
             });
 
+    });
+    </script>
+    <script type="text/javascript">
+    // this one allows the log viewer to pop up
+    $().ready(function() {
+        $('#modal-placeholder').jqm({ajax: '@href', trigger: 'a.logview'});
     });
     </script>
     
@@ -114,28 +124,31 @@
 </thead>
 <tbody>
 {% for error in logs %}
-    <tr id="row-{{ error.get_id }}" class="{{ error.archived|yesno:'archived,inbox'}}">
+    <tr id="{{ error.get_id }}" class="{{ error.archived|yesno:'archived,inbox'}}">
         <td>{{ error.clinic_id }}</td>
         <td>{{ error.date }}</td>
         <td>{{ error.type }}</td>
-	    <td>{% if debug %}<a href="{% url sofa error.get_id %}">{% endif %}{{ error.message|default:"NO ERROR MESSAGE" }}{% if debug %}</a>{% endif %}</td>
+	    <td><a href="{% url couchlog_single error.get_id %}" class="logview">{{ error.message|default:"NO ERROR MESSAGE" }}</a></td>
 	    <!-- <td>{{ error.stack_trace|truncatewords:10 }}</td> -->
 	    <td>{{ error.url }}</td>
 	    <!-- <td>{{ error.query_params }}</td> -->
 	    <td><center>
 	       {% if not error.archived %}
-	            <input type="button" id="{{ error.get_id }}" class="updatebutton" action_type="archive" value="archive" />
+	            <input type="button" class="updatebutton" action_type="archive" value="archive" />
 	        {% else %}
-                <input type="button" id="{{ error.get_id }}" class="updatebutton" action_type="move_to_inbox" value="move to inbox"/>
+                <input type="button" class="updatebutton" action_type="move_to_inbox" value="move to inbox"/>
 	        {% endif %}
 	    </center></td>
 	    <td><center>
-	       <input type="button" id="email-{{ error.get_id }}" log_id="{{error.get_id}}" class="emailbutton" action_type="email" value="report error"/>
+	       <input type="button" class="emailbutton" action_type="email" value="report error"/>
 	       </center></td>
     </tr>
 {% endfor %}
 </tbody>
 </table>
+<div class="jqmWindow" id="modal-placeholder">
+    Please wait while we load that for you... 
+</div>
 <div id="email-form" title="Report error">
     <form>
     <fieldset>
