add qwerty keyboard mode to touchscreen

--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -22,6 +22,8 @@ CLINIC_NUM_CHW_ZONES = 6; //templatize me
 
 autoAdvance = true;
 
+kbdQwerty = false;
+
 function init () {
 
   initStaticWidgets();
