--- a/bhoma/apps/couchlog/static/stylesheets/couchlog.css
+++ b/bhoma/apps/couchlog/static/stylesheets/couchlog.css
@@ -1,8 +1,8 @@
-table.tablesorter tr.archived td {
+tr.archived td {
     color:grey;
 }
 
-table.tablesorter tr.inbox td {
+tr.inbox td {
     font-weight:bold;
 }
 
