--- a/bhoma/apps/couchlog/templates/couchlog/dashboard.html
+++ b/bhoma/apps/couchlog/templates/couchlog/dashboard.html
@@ -1,30 +1,96 @@
 {% extends "layout.html" %}
 {% block page_stylesheets %}
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/tablesorter/style.css" type="text/css">
-    <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/tablesorter/pager/jquery.tablesorter.pager.css" type="text/css">
     <link rel="stylesheet" href="{{MEDIA_URL}}couchlog/stylesheets/couchlog.css" type="text/css">
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/jquery-ui-bhoma/jquery-ui-1.8.4.custom.css" type="text/css">
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/jqModal.css" type="text/css">
+    <link rel="stylesheet" href="{{MEDIA_URL}}webapp/datatables/css/demo_table.css" type="text/css">
 {% endblock %}
 {% block page_javascripts %}
-    <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery.tablesorter.min.js"></script>
-    <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery.tablesorter.pager.js"></script>
     <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery-ui-1.8.4.custom.min.js"></script>
     <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jqModal.js"></script>
+    <script type="text/javascript" src="{{MEDIA_URL}}webapp/datatables/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript">
-    // this script is required for tablesorter
-    $(document).ready(function() { 
-        $("table") 
-            .tablesorter({widthFixed: true, sortList: [[1, 1],[0,0]]}) 
-            .tablesorterPager({container: $("#pager"), positionFixed: false}); 
-    }); 
+    // datatable configuration.
+    $(document).ready(function() {
+        $('.datatable').dataTable({
+            "bProcessing": true,
+            "bServerSide": true,
+            "sAjaxSource": "{% url couchlog_paging %}",
+            "aaSorting": [[ 3, "desc" ]],
+            "fnRowCallback": function( nRow, aData, iDisplayIndex ) {
+	            // annotate row with id
+	            $(nRow).attr("id", aData[0]);
+	            
+	            // annotate row with class
+	            if (aData[1] == "true") {
+	               $(nRow).addClass("archived");
+	            } else {
+	               $(nRow).addClass("inbox");
+	            }
+	            
+	            // remove added odd/even styles.  they mess with our custom classes
+	            $(nRow).removeClass("odd even");
+	            return nRow;
+	        },
+	        "fnServerData": function ( sSource, aoData, fnCallback ) {
+	            // add data to the post
+	            
+	            // are we in the inbox or all view
+	            aoData.push( { "name": "show", "value": "{{ show }}" } );
+	            
+	            // previous startkey, endkeys if any.
+	            // currently unused but may one day be necessary for paging                   
+                aoData.push( { "name": "startkey", "value": $("#startkey").val() } );
+	            aoData.push( { "name": "endkey", "value": $("#endkey").val() } );
+                
+	            $.getJSON( sSource, aoData, function(json) {
+                   // set startkey and endkey in their appropriate divs, these are
+                   // currently unused but may one day be necessary for paging	               
+	               $("#startkey").val(JSON.stringify(json.startkey));
+	               $("#endkey").val(JSON.stringify(json.endkey));
+	               fnCallback(json);
+	            });
+            },
+            "aoColumnDefs": [ 
+		            {
+		                "fnRender": function ( oObj ) {
+		                    return '<a href="/couchlog/view/' + oObj.aData[0] + '" onclick="$(\'#modal-placeholder\').jqmShow($(this)); return false;"  class="logview">' + oObj.aData[5] +'</a>';
+		                },
+		                "aTargets": [ 5 ]
+		            }, 
+		            {
+                        "fnRender": function ( oObj ) {
+                            return '<a href="#" class="emaillink">report error</a>';
+                        },
+                        "aTargets": [ 8 ]
+                    }, 
+                    {
+                        "fnRender": function ( oObj ) {
+                            is_archived = oObj.aData[1] == "false";
+                            if (is_archived) {
+                                return '<input type="button" class="updatebutton" action_type="archive" value="archive" />';
+                            } else {
+                                return '<input type="button" class="updatebutton" action_type="move_to_inbox" value="move to inbox" />';
+                            }
+                        },
+                        "aTargets": [ 7 ]
+                    }, 
+                    { "bVisible": false,  "aTargets": [ 0, 1 ] },
+		            { "bSortable": false, "aTargets": [0,1,2,4,5,6,7,8] },
+		            { "bSortable": true, "aTargets": [3] }, 
+		            { "sWidth": "20px", "aTargets": [ 2, 3, 7, 8 ] },
+		            { "sWidth": "40px", "aTargets": [ 4 ] }
+	        ]
+        });
+    } );
     </script>
     <script type="text/javascript">
         // this script is for doing the archiving/inbox moving
         $(".updatebutton").live("click", 
-        function () { 
+        function () {
             button = $(this);
-            id = button.parent().parent().parent().attr("id");
+            id = button.parent().parent().attr("id");
             jQuery.post("{% url couchlog_update %}", { "id": id, "action": button.attr("action_type")},
             function(data){
                 json_res = JSON.parse(data);
@@ -56,20 +122,31 @@
             modal: true,
             buttons: {
                 'Send report': function() {
-                    jQuery.post("{% url couchlog_email %}", { "id": $("#log_holder").val(), 
+                    id = $("#log_holder").val();
+                    jQuery.post("{% url couchlog_email %}", { "id": id,
                                                       "to": $("#email").val(),
                                                       "notes": $("#notes").val()},
 			            function(data){
 			                json_res = JSON.parse(data);
 			                row = $($("#" + json_res.id)[0]);
-                            button_elem = $(row.find(".emailbutton")[0]);
-                            if (json_res.success) {
-			                    button_elem.val("sent!");
+			                button_elem = $(row.find(".emaillink")[0]);
+			                if (json_res.success) {
+			                    button_elem.text("sent!");
+			                    button_elem.removeClass("notice");
+                                button_elem.addClass("success");
+			                    button_elem.click(function() { alert("Message was sent."); return false; } );
 			                } else {
-			                    button_elem.val("failed!");
+			                    button_elem.text("failed!");
+			                    button_elem.removeClass("notice");
+                                button_elem.addClass("error");
+                                button_elem.click(function() { alert("Error was: " + json_res.message); return false;} );
 			                }
 			            });
                     $(this).dialog('close');
+                    row = $($("#" + id)[0]);
+                    button_elem = $(row.find(".emaillink")[0]);
+                    button_elem.addClass("notice");
+                    button_elem.text("sending...");
                 },
                 Cancel: function() {
                     $(this).dialog('close');
@@ -77,23 +154,21 @@
             },
         });
         
-        
-        $('.emailbutton')
-            .click(function() {
-                button = $(this);
-                id = button.parent().parent().parent().attr("id");
-                $('#notes').val('');
-                $("#log_holder").val(id);
-                $('#email-form').dialog('open');
-                $('#notes').focus();
-            });
-
+        $(".emaillink").live("click", 
+            function() {
+                    id = $(this).parent().parent().attr("id");
+                    $('#notes').val('');
+                    $("#log_holder").val(id);
+                    $('#email-form').dialog('open');
+                    $('#notes').focus();
+                });
     });
     </script>
     <script type="text/javascript">
     // this one allows the log viewer to pop up
     $().ready(function() {
-        $('#modal-placeholder').jqm({ajax: '@href', trigger: 'a.logview'});
+        $('#modal-placeholder').jqm({ajax: '@href', trigger: 'a.logview', 
+                                     ajaxText: "Please wait while we load that for you..." });
     });
     </script>
     
@@ -106,13 +181,14 @@
     <li {% ifequal show "inbox" %}class="active"{% endifequal %}><a href="?show=inbox">Inbox</a></li>
     <li {% ifequal show "all" %}class="active"{% endifequal %}><a href="?show=all">All</a></li>
 </ul>
-{% if logs %}
+{% if count %}
 
-{% include "pager.html" %}
 <br></br>
-<table class="tablesorter" style="float:left;">
+<table class="datatable" style="float:left;">
 <thead>
     <tr>
+        <th>id</th>
+        <th>archived?</th>
 	    <th>clinic</th>
 	    <th>date</th>
 	    <th>type</th>
@@ -121,36 +197,15 @@
 	    <th>url</th>
 	    <!-- <th>query params</th> -->
 	    <th></th>
-	    <th></th>
+        <th></th>
     </tr>
 </thead>
 <tbody>
-{% for error in logs %}
-    <tr id="{{ error.get_id }}" class="{{ error.archived|yesno:'archived,inbox'}}">
-        <td>{{ error.clinic_id }}</td>
-        <td>{{ error.date }}</td>
-        <td>{{ error.type }}</td>
-	    <td><a href="{% url couchlog_single error.get_id %}" class="logview">{{ error.message|default:"NO ERROR MESSAGE" }}</a></td>
-	    <!-- <td>{{ error.stack_trace|truncatewords:10 }}</td> -->
-	    <td>{{ error.url }}</td>
-	    <!-- <td>{{ error.query_params }}</td> -->
-	    <td><center>
-	       {% if not error.archived %}
-	            <input type="button" class="updatebutton" action_type="archive" value="archive" />
-	        {% else %}
-                <input type="button" class="updatebutton" action_type="move_to_inbox" value="move to inbox"/>
-	        {% endif %}
-	    </center></td>
-	    <td><center>
-	       <input type="button" class="emailbutton" action_type="email" value="report error"/>
-	       </center></td>
-    </tr>
-{% endfor %}
 </tbody>
 </table>
-<div class="jqmWindow" id="modal-placeholder">
-    Please wait while we load that for you... 
-</div>
+<div class="jqmWindow" id="modal-placeholder"></div>
+<input type="hidden" id="startkey" value="{{startkey}}"></input>
+<input type="hidden" id="endkey" value="{{endkey}}"></input>
 <div id="email-form" title="Report error">
     <form>
     <fieldset>
