commit for reports - work in progress
added render_summary_report to report_tags.py
created new file, report_summary_graph.html
minor changes to report_graph.html to better viewing pleasure

--- a/bhoma/apps/reports/templates/reports/couch_report.html
+++ b/bhoma/apps/reports/templates/reports/couch_report.html
@@ -2,5 +2,6 @@
 {% block reportcontent %}
 {% load report_tags %}
 {% render_report report %}
+{% render_summary_graph report %}
 {% render_graph report %}
 {% endblock %}
