add start/activation/due dates to case view

--- a/bhoma/apps/case/templates/case/single_case.html
+++ b/bhoma/apps/case/templates/case/single_case.html
@@ -11,9 +11,13 @@
     <tr><td>Current status:&nbsp;&nbsp;</td><td><b>{% format_case case %}</b></td></tr>
     <tr><td>Original visit date:&nbsp;&nbsp;</td><td><b>{{ case.opened_on|date:"d M Y" }}</b></td></tr>
     <tr><td>Original visit type:&nbsp;&nbsp;</td><td><b>{% value_for_display case.get_encounter.type %}</b></td></tr>
+    <tr><td>Make available to phone on:&nbsp;&nbsp;</td><td><b>{{ case.get_latest_commcare_case.start_date|date:"d M Y"}}</b></td></tr>
+    <tr><td>Active on:&nbsp;&nbsp;</td><td><b>{{ case.get_latest_commcare_case.activation_date|date:"d M Y"}}</b></td></tr>
+    <tr><td>Due on:&nbsp;&nbsp;</td><td><b>{{ case.get_latest_commcare_case.due_date|date:"d M Y"}}</b></td></tr>
     <tr><td>Modified on:&nbsp;&nbsp;</td><td><b>{{ case.modified_on|date:"d M Y H:i"}}</b></td></tr>
     <tr><td>Closed on:&nbsp;&nbsp;</td><td><b>{{ case.closed_on|date:"d M Y"|default:"N/A" }}</b></td></tr>
     <tr><td>Send/sent to phone?&nbsp;&nbsp;</td><td><b>{{ case.send_to_phone|yesno:"yes,no" }} {% if case.send_to_phone %}({% value_for_display case.send_to_phone_reason %}){% endif %}    </b></td></tr>
+    
   </table>
 </div>
 {% endblock %}
