disable search box for now, it doesn't work

--- a/bhoma/apps/couchlog/templates/couchlog/dashboard.html
+++ b/bhoma/apps/couchlog/templates/couchlog/dashboard.html
@@ -15,6 +15,7 @@
         $('.datatable').dataTable({
             "bProcessing": true,
             "bServerSide": true,
+            "bFilter": false, 
             "sAjaxSource": "{% url couchlog_paging %}",
             "aaSorting": [[ 3, "desc" ]],
             "fnRowCallback": function( nRow, aData, iDisplayIndex ) {
