add clinic name, datatables UI to the clinic summary reports

--- a/bhoma/apps/reports/templates/reports/partials/couch_report_partial.html
+++ b/bhoma/apps/reports/templates/reports/partials/couch_report_partial.html
@@ -1,8 +1,10 @@
-<table>
+<table class="datatable">
     <thead>
+        <tr>
 {% for heading in headings %}
-        <th>{{ heading }}</th>
+            <th>{{ heading }}</th>
 {% endfor %}
+        </tr>
     </thead>
     <tbody>
 {% for row in rows %}
