--- a/bhoma/apps/patient/templates/patient/dashboard.html
+++ b/bhoma/apps/patient/templates/patient/dashboard.html
@@ -6,13 +6,13 @@
 {% block page_javascripts %}
     <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery-ui-1.8.4.custom.min.js"></script>
     <script type="text/javascript" src="{{MEDIA_URL}}webapp/datatables/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="{{MEDIA_URL}}webapp/datatables/js/plugins.js"></script>
     <script type="text/javascript">
     // datatable configuration.
     $(document).ready(function() {
         $('.datatable').dataTable({
             "bProcessing": true,
             "bServerSide": true,
-            "bFilter": false, 
             "bJQueryUI": true, 
             "sAjaxSource": "{% url patient_paging %}",
             "fnRowCallback": function( nRow, aData, iDisplayIndex ) {
@@ -31,7 +31,7 @@
                     { "bVisible": false,  "aTargets": [ 0 ] },
                     { "bSortable": false, "aTargets": [0,1,2,3,4,5,6] },
             ]
-        });
+        }).fnSetFilteringDelay();
     } );
     </script>
 {% endblock %}
