--- a/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
+++ b/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
@@ -18,7 +18,7 @@
 <div class="span-5">
 <ul style="list-style: None; padding-left: 0px;">
     <li><a href="{% url sofa patient.get_id %}">view patient in sofa</a></li> 
-    <li><a href="{% url export_patient patient.get_id %}">export patient to file</a></li> 
+    <li><a href="{% url export_patient patient.get_id %}">export patient</a></li> 
 </ul>
 </div>
 <div class="span-5 last">
