--- a/bhoma/apps/patient/templates/patient/choose_encounter_touchscreen.html
+++ b/bhoma/apps/patient/templates/patient/choose_encounter_touchscreen.html
@@ -18,5 +18,5 @@
 {% endfor %}
 </center>
 <!-- TODO: remove debug -->
-<a href="{% url sofa patient.get_id %}">view in sofa (DEBUG)</a> 
+<a href="{% url futon patient.get_id %}">view in futon (DEBUG)</a> 
 {% endblock %}
