--- a/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
+++ b/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
@@ -17,7 +17,7 @@
 <h4 style="padding: 0px; margin-bottom: 5px;">Debug Tools</h4>
 <div class="span-5">
 <ul style="list-style: None; padding-left: 0px;">
-    <li><a href="{% url sofa patient.get_id %}">view patient in sofa</a></li> 
+    <li><a href="{% url futon patient.get_id %}">view patient in futon</a></li> 
     <li><a href="{% url export_patient patient.get_id %}">export patient</a></li> 
 </ul>
 </div>
