--- a/bhoma/apps/chw/templates/chw/single_chw.html
+++ b/bhoma/apps/chw/templates/chw/single_chw.html
@@ -3,6 +3,6 @@
 <h3>{{ chw.first_name }} {{ chw.last_name }} @ {{ chw.current_clinic_display }} (Zone {{ chw.current_clinic_zone|default:"NONE" }})</h3>
 <h4><p>Your CommCare username is: <b>{{ chw.user.username|default:"NOT SET" }}</b></p></h4>
 {% if debug %}
-<p><a href="{% url sofa chw.get_id %}">view in sofa (DEBUG)</a></p>
+<p><a href="{% url futon chw.get_id %}">view in futon (DEBUG)</a></p>
 {% endif %} 
 {% endblock %}
