--- a/bhoma/apps/encounter/templates/encounter/partials/encounter_list.html
+++ b/bhoma/apps/encounter/templates/encounter/partials/encounter_list.html
@@ -17,7 +17,7 @@
     {% if forloop.counter < 10 %}
         <tr>
             <td class="{{ encounter.dynamic_data.classification }}"></td>
-            <td nowrap="true">{% if debug %}<a href="{% url sofa encounter.xform_id %}">{% endif %}
+            <td nowrap="true">{% if debug %}<a href="{% url futon encounter.xform_id %}">{% endif %}
                 {{ encounter.visit_date|date:"d M Y"|default:"No date found" }}
                 {% if debug %}</a>{% endif %}
             </td>
