--- a/bhoma/apps/patient/templates/patient/partials/form_list.html
+++ b/bhoma/apps/patient/templates/patient/partials/form_list.html
@@ -3,7 +3,7 @@
 <h3>Linked Data</h3>
 <ul>
     {% endif %}
-    <li><a href="{% url sofa xform.get_id %}">{{ xform.type }}</a> ({{ xform.namespace }})</li>
+    <li><a href="{% url futon xform.get_id %}">{{ xform.type }}</a> ({{ xform.namespace }})</li>
     {% if forloop.last %} 
 </ul>
     {% endif %}
