--- a/bhoma/apps/patient/templates/patient/single_patient.html
+++ b/bhoma/apps/patient/templates/patient/single_patient.html
@@ -21,7 +21,7 @@
 <h3>Linked Data</h3>
 <ul>
     {% endif %}
-    <li><a href="{% url sofa xform.get_id %}">{{ xform.type }}</a> ({{ xform.namespace }})</li>
+    <li><a href="{% url futon xform.get_id %}">{{ xform.type }}</a> ({{ xform.namespace }})</li>
     {% if forloop.last %} 
 </ul>
     {% endif %}
@@ -29,5 +29,5 @@
 <h3>Recent Encounters</h3>
 {% include "encounter/partials/encounter_list.html" %}
 
-<a href="{% url sofa patient.get_id %}">view in sofa</a> 
+<a href="{% url futon patient.get_id %}">view in futon</a> 
 {% endblock %}
