--- a/bhoma/apps/webapp/static/stylesheets/touchscreen.css
+++ b/bhoma/apps/webapp/static/stylesheets/touchscreen.css
@@ -86,8 +86,7 @@
     border-radius: 10px;
     -webkit-border-radius: 10px;
     margin: 30px;
-    background-color: rgb(17, 17, 136);
-
+    background: #111188; /* old browsers */
 }
 .really-big-button td {
     font-weight: bold;
@@ -104,9 +103,32 @@
     border-radius: 10px;
     -webkit-border-radius: 10px;
     margin: 15px;
-    background-color: rgb(17, 17, 136);
+    background: #111188; /* old browsers */
 
 }
+
+#clear-button, #help-button {
+    background: #999999; /* old browsers */
+    background: -moz-linear-gradient(top, #cccccc 0%, #999999 100%); /* firefox */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cccccc), color-stop(100%,#999999)); /* webkit */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cccccc', endColorstr='#999999',GradientType=0 ); /* ie */
+}
+
+.shiny-button {
+	background: #111188; /* old browsers */
+    background: -moz-linear-gradient(top, #3232B4 0%, #111188 100%); /* firefox */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3232B4), color-stop(100%,#111188)); /* webkit */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3232B4', endColorstr='#111188',GradientType=0 ); /* ie */
+}
+
+.selected {
+    background: #00bbff; /* old browsers */
+    background: -moz-linear-gradient(top, #00ccff 0%, #00bbee 100%); /* firefox */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00bbff), color-stop(100%,#0099dd)); /* webkit */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00bbff', endColorstr='#0099dd',GradientType=0 ); /* ie */
+    color: #555555
+}
+
 .big-button td {
     font-weight: bold;
     text-align: center;  
@@ -136,21 +158,35 @@
     position: absolute; 
     top: 6px; 
     left: 10px; 
+    background: #67a9db; /* old browsers */
+    
+    background: -moz-linear-gradient(top, #67a9db 0%, #4587b9 100%); /* firefox */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#67a9db), color-stop(100%,#4587b9)); /* webkit */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#67a9db', endColorstr='#4587b9',GradientType=0 ); /* ie */
     background-color: rgb(102, 170, 221); 
 }
 
-#menu-button {
+#home-button {
     position: absolute; 
     top: 6px; 
     left: 166px; 
-    background-color: rgb(221, 34, 51); 
+    background: #dd2233; /* old browsers */
+    background: -moz-linear-gradient(top, #dd2233 0%, #bb0011 100%); /* firefox */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#dd2233), color-stop(100%,#bb0011)); /* webkit */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dd2233', endColorstr='#bb0011',GradientType=0 ); /* ie */
+    background-color: rgb(102, 170, 221);
+    
 }
 
 #next-button {
     position: absolute; 
     top: 6px; 
     left: 844px; 
-    background-color: rgb(17, 170, 51); 
+    background: #11ab33; /* old browsers */
+    background: -moz-linear-gradient(top, #11ab33 0%, #008911 100%); /* firefox */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#11ab33), color-stop(100%,#008911)); /* webkit */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11ab33', endColorstr='#008911',GradientType=0 ); /* ie */
+    background-color: rgb(102, 170, 221);
 }
 
 #session-info {
