--- a/bhoma/apps/webapp/templates/touchscreen/wrapper-raw.html
+++ b/bhoma/apps/webapp/templates/touchscreen/wrapper-raw.html
@@ -64,7 +64,7 @@
                 </div>
 {% endif %}
 {% if options.menubutton.show %}
-                <div id="menu-button" class="footer-button" onclick="location.href='{{options.menubutton.link|default:"#"}}'">
+                <div id="home-button" class="footer-button" onclick="location.href='{{options.menubutton.link|default:"#"}}'">
                     <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
                         <tbody>
                             <tr>
