--- a/bhoma/apps/webapp/static/stylesheets/touchscreen.css
+++ b/bhoma/apps/webapp/static/stylesheets/touchscreen.css
@@ -115,6 +115,11 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cccccc', endColorstr='#999999',GradientType=0 ); /* ie */
 }
 
+.rounded {
+	-moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+}
 .shiny-button, .key-button {
 	background: #111188; /* old browsers */
     background: -moz-linear-gradient(top, #3232B4 0%, #111188 100%); /* firefox */
@@ -170,7 +175,6 @@
     background: -moz-linear-gradient(top, #67a9db 0%, #4587b9 100%); /* firefox */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#67a9db), color-stop(100%,#4587b9)); /* webkit */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#67a9db', endColorstr='#4587b9',GradientType=0 ); /* ie */
-    background-color: rgb(102, 170, 221); 
 }
 
 #home-button {
@@ -181,8 +185,6 @@
     background: -moz-linear-gradient(top, #dd2233 0%, #bb0011 100%); /* firefox */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#dd2233), color-stop(100%,#bb0011)); /* webkit */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dd2233', endColorstr='#bb0011',GradientType=0 ); /* ie */
-    background-color: rgb(102, 170, 221);
-    
 }
 
 #next-button {
@@ -193,7 +195,6 @@
     background: -moz-linear-gradient(top, #11ab33 0%, #008911 100%); /* firefox */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#11ab33), color-stop(100%,#008911)); /* webkit */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11ab33', endColorstr='#008911',GradientType=0 ); /* ie */
-    background-color: rgb(102, 170, 221);
 }
 
 #session-info {
