--- a/bhoma/apps/webapp/templates/touchscreen/wrapper-raw.html
+++ b/bhoma/apps/webapp/templates/touchscreen/wrapper-raw.html
@@ -32,7 +32,8 @@
                             </tbody>
                         </table>
                     </div>
-                    <div id="help-button" class="footer-button">
+{% if options.helpbutton.show %}
+                    <div id="help-button" class="footer-button" onclick="location.href='{{options.backbutton.link|default:"#"}}'">
                         <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
                             <tbody>
                                 <tr>
@@ -41,6 +42,7 @@
                             </tbody>
                         </table>
                     </div>
+{% endif %}
                 </div>
             </div>
             <div style="position: absolute; top: 70px; left: 10px; width: 1004px; height: 608px; background-color: rgb(238, 238, 255);" id="entry">
