--- a/bhoma/apps/webapp/static/stylesheets/touchscreen.css
+++ b/bhoma/apps/webapp/static/stylesheets/touchscreen.css
@@ -122,6 +122,7 @@
 }
 
 .shiny-button, .key-button {
+	color: #fff;
 	background: #111188; /* old browsers */
     background: -moz-linear-gradient(top, #3232B4 0%, #111188 100%); /* firefox */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3232B4), color-stop(100%,#111188)); /* webkit */
