Revamped PI Report Display
- Added indicator descriptions to Under5
- Added indicator descriptions to Pregnancy
- Fixed description type on display.py
- Graph_value now returns "N/A" for items that don't have values.
- Report_graph and render_report no longer used.  Only summary graphs for
the time being.
- Changed formatting on summary graphs.  Show if no data available to graph.
Plots month - adds months to clinic summary plot.  Displays definition of
report indicators at the bottom.
- Lots of changes to render_summary_graph to pass in correct data to be plotted.

--- a/bhoma/apps/reports/templates/reports/partials/report_graph.html
+++ b/bhoma/apps/reports/templates/reports/partials/report_graph.html
@@ -1,11 +1,12 @@
 {% load shared_tags %}
-<p>Click which Report to View: <button id="clinic_view">Make this button turn off plots below here</button>
-      <button id="time_view">Make this button turn these plots on</button></p>
+
+<h3><br>Definition of Performance Indicators:</h3>
 
 {% for indicator_value in display_data %}
-<h3>Performance Indicator {{ forloop.counter }}: {{ titles|array_lookup:forloop.counter0 }}</h3>
+<h4><br>Performance Indicator {{ forloop.counter }}: {{ titles|array_lookup:forloop.counter0 }}:</h4>
 
-<div id="placeholder{{ forloop.counter0 }}" style="width:950px;height:{{ height }}px;"></div> 
+<!-- removing graph for time being - 07/10/10 mjt -->
+<div id="placeholder{{ forloop.counter0 }}" style="width:950px;height:{{ height }}px;"></div>
 
 <p>Proportion of visits that meet the following criteria: {{ descriptions|array_lookup:forloop.counter0 }} </p>
 
