better sync log view, details view for each CHW

--- a/bhoma/apps/webapp/templates/national_landing_page.html
+++ b/bhoma/apps/webapp/templates/national_landing_page.html
@@ -14,6 +14,7 @@
 <ul>
     <li><a href="{% url clinic_landing_page %}">Go to Clinic Landing Page</a></li>
     <li><a href="{% url couchlog_home %}">View recent error messages</a></li>
+    <li><a href="{% url phone_sync_logs %}">Look at sync logs from phones</a></li>
 </ul>
 {% endif %}
 {% endblock %}
