--- a/bhoma/apps/phone/templates/phone/sync_logs_for_chw.html
+++ b/bhoma/apps/phone/templates/phone/sync_logs_for_chw.html
@@ -11,29 +11,30 @@
         $(document).ready(function() {
             $('.datatable').dataTable({
                 "bJQueryUI": true,
-                "aaSorting": [[ 3, "desc" ]],
+                "aaSorting": [[ 1, "desc" ]]
             });
         }); 
     </script>
 {% endblock %}
 {% block content %}
-
+<br></br>
+<h3>Sync history for <b>{{ chw.formatted_name }}</b> at {{ chw.current_clinic_display }}</h3>
 <table class="datatable">
 <thead>
     <tr>
-        <th>CHW</th>
-        <th>Clinic</th>
-        <th># syncs</th>
-        <th>Last sync</th>
+        <th>Sync #</th>
+        <th>Date</th>
+        <th>Last sequence id</th>
+        <th>Cases synced</th>
     </tr>
 </thead>
 <tbody>
-{% for row in sync_data %}
+{% for log in sync_data %}
     <tr>
-        <td><a href="{% url phone_sync_logs_for_chw row.chw.get_id %}">{{ row.chw.formatted_name }}</a></td>
-        <td>{{ row.chw.current_clinic_display }}</td>
-        <td>{{ row.value }}</td>
-        <td>{{ row.last_sync.date }}</td>
+        <td>{{ forloop.counter }}</td>
+        <td>{{ log.date }}</td>
+        <td>{{ log.last_seq }}</td>
+        <td>{{ log.cases|length }}</td>
     </tr>
 {% endfor %}
 </tbody>
